# ipygame

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy-docs.yml
docs/: astro.config.mjs  package.json
docs/jupyterlite/: jupyter_lite_config.json  overrides.json
docs/jupyterlite/contents/: 01_basic_display.ipynb  02_draw_primitives.ipynb  03_events_input.ipynb  04_images_transforms.ipynb  06_snake_game.ipynb  07_pong_game.ipynb
docs/scripts/: api_coverage.yml  build_jupyterlite.ps1  build_jupyterlite.sh  generate_api_coverage.py  generate_api_docs.py
docs/src/content/docs/: examples.mdx  index.mdx  quickstart.mdx
docs/src/content/docs/api/: index.mdx
examples/: 02_draw_primitives.ipynb  04_images_transforms.ipynb  06_pong_game.ipynb
ipygame/: __init__.py  _backend.py  _hook.py  camera.py  color.py  colordict.py  constants.py  cursors.py  display.py  draw.py  event.py  font.py  freetype.py  ftfont.py  gfxdraw.py  image.py  key.py  locals.py  mask.py  math.py  midi.py  mouse.py  pixelcopy.py  rect.py  sndarray.py  sprite.py  surface.py  surfarray.py  time.py  transform.py
