[project]
name = "ipygame"
version = "0.1.0"
description = "A pygame API-compatible reimplementation for running `pygame`-style code inside Jupyter notebooks (backed by ipycanvas)."
readme = "README.md"
requires-python = ">=3.11"
license = "LGPL-2.1-only"
dependencies = [
    "ipycanvas>=0.13",
    "ipywidgets>=8.0",
    "numpy>=1.24",
    "Pillow>=9.0",
]

[dependency-groups]
dev = [
    "pydoc-markdown>=4.8.2",
    "PyYAML>=6.0",
    "jupyterlite>=0.4.0",
    "jupyterlite-pyodide-kernel>=0.4.0",
    "jupyter-server>=2.0.0",
    "build>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/Kamuyin/ipygame"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
